# Tetris

./: CMakeLists.txt  Readme.md  build.bat  build.sh  configure.bat  configure.sh
Tetris/: CMakeLists.txt
Tetris/include/: all.h  main.h
Tetris/src/: all.cpp  main.cpp
app/: CMakeLists.txt
app/include/: Color.h  Manager.h  Object.h  Rect.h  Tetris.h  all.h  main.h
app/src/: Manager.cpp  Object.cpp  Rect.cpp  Tetris.cpp  all.cpp  main.cpp
output/GNU/: Tetris
prj/MinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
prj/MinGW/SFML/: Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
prj/MinGW/SFML/src/SFML/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/Main/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/System/: Makefile  cmake_install.cmake
prj/MinGW/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
prj/MinGW/Tetris/: Makefile  cmake_install.cmake
prj/Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
prj/Unix/SFML/: Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
prj/Unix/SFML/src/SFML/: Makefile  cmake_install.cmake
prj/Unix/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
prj/Unix/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
prj/Unix/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
prj/Unix/SFML/src/SFML/System/: Makefile  cmake_install.cmake
prj/Unix/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
prj/Unix/SFML/tools/pkg-config/: sfml-graphics.pc  sfml-window.pc
prj/Unix/Tetris/: Makefile  cmake_install.cmake
prj/VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tetris.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
prj/VS/SFML/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLStaticTargets.cmake  cmake_install.cmake
prj/VS/SFML/lib/Debug/: sfml-main-d.lib  sfml-system-s-d.lib
prj/VS/SFML/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
prj/VS/SFML/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
prj/VS/SFML/src/SFML/Audio/sfml-audio.dir/Debug/: sfml-audio-s-d.lib.recipe
prj/VS/SFML/src/SFML/Audio/sfml-audio.dir/Debug/sfml-audio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sfml-audio.lastbuildstate
prj/VS/SFML/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
prj/VS/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/: sfml-graphics-s-d.lib.recipe
prj/VS/SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/sfml-graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sfml-graphics.lastbuildstate
prj/VS/SFML/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj  sfml-main.vcxproj.filters
prj/VS/SFML/src/SFML/Main/sfml-main.dir/Debug/sfml-main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  sfml-main.lastbuildstate
prj/VS/SFML/src/SFML/Network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-network.vcxproj  sfml-network.vcxproj.filters
prj/VS/SFML/src/SFML/Network/sfml-network.dir/Debug/: sfml-network-s-d.lib.recipe
prj/VS/SFML/src/SFML/Network/sfml-network.dir/Debug/sfml-network.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+5 more)
prj/VS/SFML/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-system.vcxproj  sfml-system.vcxproj.filters
prj/VS/SFML/src/SFML/Window/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-window.vcxproj  sfml-window.vcxproj.filters
prj/VS/Tetris/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Tetris.vcxproj  Tetris.vcxproj.filters  cmake_install.cmake
prj/VS/Tetris/Tetris.dir/Debug/: Tetris.exe.recipe
prj/VS/Tetris/Tetris.dir/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj/VS/Win32/Debug/ALL_BUILD/: ALL_BUILD.recipe
prj/VS/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
prj/VS/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
prj/VS/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
prj/VS/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
prj/VS/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  ZERO_CHECK.lastbuildstate
(+19 files in other folders)
